--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "js-data": "^2.4.0",
+    "js-data-angular": "^3.1.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.2.7",
