--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mocha-mongoose": "^1.0.3",
     "mongodb": "^1.4.33",
     "mongoose": "^4.0.7",
+    "mongoose-autopopulate": "^0.4.0",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
