--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^1.0.0",
     "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.4",
+    "craftyjs": "^0.6.3",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "gulp": "^3.8.11",
