--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
 
   "rules": {
     ////////// Possible Errors //////////
+    "no-comma-dangle": 0,
     "no-cond-assign": 0,          // disallow assignment in conditional expressions
     "no-console": 0,                      // disallow use of console (off by default in the node environment)
     "no-constant-condition": 0,                 // disallow use of constant expressions in conditions
@@ -178,6 +179,7 @@
     "no-space-before-semi": 0,      // disallow space before semicolon
     "no-spaced-func": 0,            // disallow space between function identifier and application
     "no-ternary": 0,                // disallow the use of ternary operators (off by default)
+    "no-trailing-spaces": 0,        // disallow trailing whitespace at the end of lines
     "no-underscore-dangle": 0,      // disallow dangling underscores in identifiers
     "no-wrap-func": 0,              // disallow wrapping of non-IIFE statements in parens
     "one-var": 0,                   // allow just one var statement per function (off by default)
