--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-animate": "^1.4.7",
-    "angular-bootstrap": "^0.12.0",
     "angular-mocks": "^1.4.0",
+    "angular-ui-bootstrap": "^0.14.0",
     "angular-ui-router": "^0.2.15",
     "angular-ui-sortable": "^0.13.4",
     "babel": "^5.0.12",
