--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-animate": "^1.4.7",
+    "angular-aria": "^1.4.7",
+    "angular-material": "^0.11.3",
     "angular-mocks": "^1.4.0",
     "angular-ui-bootstrap": "^0.14.0",
     "angular-ui-router": "^0.2.15",
