--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "chai": "^2.1.0",
     "chalk": "^1.0.0",
     "connect-mongo": "^0.7.0",
-    "cookie-parser": "^1.3.4",
-    "craftyjs": "^0.6.3",
+    "cookie-parser": "1.3.4",
+    "craftyjs": "0.6.3",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "gulp": "^3.8.11",
